# AICodeReviewer

./: .git_commit_msg.txt  .gitignore  AICodeReviewer.spec  LICENSE  README.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.md  build_exe.bat  build_installer.bat  config.ini  debug_kiro_discovery.py  diagnose_kiro.py  gui_validation_report.json  pyproject.toml  requirements.txt  review_report_20260214_224820.json  review_report_20260214_224820_summary.txt  review_report_20260214_234145.json  review_report_20260214_234145_summary.txt  review_report_20260215_113118.json  review_report_20260215_113118_summary.txt  review_report_20260215_122351.json  review_report_20260215_122351_summary.txt  review_report_20260216_223812.json  review_report_20260216_223812_summary.txt  test_copilot_models.py  test_dropdown_init.py  test_kiro_complete.py  test_kiro_dropdown.py  test_kiro_model_selector.py  test_model_autoload.py
docs/: ARCHITECTURE_IMPROVEMENTS_PLAN.md  GUI_ANALYSIS.md  README.md  addon-manifest-reference.md  addons.md  architecture.md  backends.md  benchmarks.md  cli.md  configuration.md  contributing.md  getting-started.md  gui-ux-audit.md  gui.md  http-api-recipes.md  http-api.md  index.html  local-http-quick-reference.md  release-process.md  reports.md  repository-maintenance.md  review-quality-log.md  review-quality-program.md  review-types.md  security.md  src.aicodereviewer.auth.html  src.aicodereviewer.backup.html  src.aicodereviewer.bedrock.html  src.aicodereviewer.config.html  src.aicodereviewer.fixer.html  src.aicodereviewer.html  src.aicodereviewer.interactive.html  src.aicodereviewer.interfaces.html  src.aicodereviewer.main.html  src.aicodereviewer.models.html  src.aicodereviewer.orchestration.html  src.aicodereviewer.performance.html  src.aicodereviewer.reporter.html  src.aicodereviewer.reviewer.html  src.aicodereviewer.scanner.html  (+3 more)
examples/: DEMO_COMPLETE.md  DEMO_WALKTHROUGH.md  DEMO_WALKTHROUGH_JA.md  QUICK_REFERENCE.md  README.md  review-pack-secure-defaults.json  run_demo.py
installer/: AICodeReviewer.iss  default-config.ini
licenses/: LICENSES.md
tests/: conftest.py  gui_test_utils.py  test_addon_approval.py  test_addon_generator.py  test_addon_review_quality.py  test_addon_review_surface.py  test_addon_validation.py  test_addons.py  test_architectural_review.py  test_backend_health.py  test_backend_model_cache.py  test_backends.py  test_backup.py  test_bedrock.py  test_benchmark_security.py  test_benchmarking.py  test_fixer.py  (+46 more)
(+521 files in other folders)
