[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aicodereviewer"
version = "0.1.0"
description = "AI Code Review Program"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "boto3",
    "keyring",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
]

requires-python = ">=3.8"

[project.scripts]
aicodereviewer = "aicodereviewer.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"