[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aicodereviewer"
version = "0.3.1"
description = "AI-powered multi-backend code review tool"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    {name = "AICodeReviewer Team"},
]
dependencies = [
    "boto3",
    "github-copilot-sdk>=0.2.1",
    "keyring",
    "psutil>=5.9",
]

[project.optional-dependencies]
gui = [
    "customtkinter>=5.2",
]
dev = [
    "pytest>=9.0",
    "pytest-cov",
    "pip-licenses",
]
all = [
    "aicodereviewer[gui,dev]",
]

[project.scripts]
aicodereviewer = "aicodereviewer.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
